Tue Jul 13 01:15:05 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkiconview.c: Some documentation updates.

Tue Jul 13 00:40:29 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gdk/gdkwindow.c (gdk_window_process_updates_internal): Do an
	empty begin_paint_region()/end_paint() for windows without
	EXPOSURE_MASK.

	* gdk/x11/gdkwindow-x11.c (_gdk_x11_window_tmp_unset_bg,
	_gdk_x11_window_tmp_reset_bg): Remove checks for EXPOSURE_MASK.

2004-07-12  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/appwindow.c: Use a GtkAboutDialog.

	* gtk/gtkaboutdialog.h: 
	* gtk/gtkaboutdialog.c: New widget: GtkAboutDialog.

	* gtk/Makefile.am (gtk_public_h_sources, gtk_c_sources): 
	* gtk/gtk.h: Add GtkAboutDialog. (#109435, Paolo Borelli,
	patch by Matthias Clasen)

	* gtk/gtkrc.c (_gtk_rc_init): Apply the gtk-default-menu-item-style 
	to cell view menu items as well.  (#147405, John Cupitt)

	* gtk/gtkentrycompletion.c: Warning fixes.  (#147420,
	Morten Welinder)

	* gtk/gtkcombobox.c (gtk_combo_box_destroy): Pop down 
	first. (#147399, John Cupitt)

Mon Jul 12 01:56:26 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkwindow-x11.c (gdk_toplevel_x11_free_contents): 
	Include the update_counter check in the HAVE_XSYNC condition,
	since update_counter isn't present in the !HAVE_XSYNC case.

Mon Jul 12 00:52:04 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/stock-icons/Makefile.am: 
	* gtk/stock-icons/stock_about_{16,24}.png: 
	* gtk/stock-icons/stock_connect_{16,24}.png: 
	* gtk/stock-icons/stock_disconnect_{16,24}.png: 
	* gtk/stock-icons/stock_edit_{16,24}.png: 
	* gtk/stock-icons/stock_media_forward_{16,24}.png: 
	* gtk/stock-icons/stock_media_next_{16,24}.png: 
	* gtk/stock-icons/stock_media_pause_{16,24}.png: 
	* gtk/stock-icons/stock_media_play_{16,24}.png: 
	* gtk/stock-icons/stock_media_previous_{16,24}.png: 
	* gtk/stock-icons/stock_media_record_{16,24}.png: 
	* gtk/stock-icons/stock_media_rewind_{16,24}.png: 